# ivp-inventario-fotos-gps-r0405148

./: .gitignore  README.md  main.py  paths.json  pyproject.toml
src/: 100_rename_images_by_date.py  200-process-data.ipynb  200_process_data.ipynb  300_metadata.py  310_add_utm.py  320_coordinates_comparison.ipynb  400_add_progresives.py  401_fix_progresives.py  paths.json  pruebas.ipynb
src/data/xlsx/: data_campo.xlsx
src/input/google_earth/: 3_R0405148.kmz  google_earth.kml
src/input/xlsx/: coordenadas_gps.xlsx  data_campo.xlsx
src/tmp/json/: 300_metadata.json  310_metadata_with_utm.json
src/tmp/pickle/: 200_processed_data.pkl  320_metadata.pkl  400_processed_with_coordinates.pkl  401_processed_fixed_with_coordinates.pkl  processed_data.pkl
src/tmp/xlsx/: 200_processed_data.xlsx  320_metadata_excel.xlsx
src/trash/: processed_data.xlsx
