[project]
name = "inventario-gps-r0405148"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "exifread>=3.0.0",
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "mplcursors>=0.6",
    "numpy>=2.2.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "piexif>=1.1.3",
    "pillow>=11.1.0",
    "python-dotenv>=1.0.1",
    "utm>=0.8.1",
]
